fixed get in touch spacing

--- a/css/style-green.css
+++ b/css/style-green.css
@@ -208,6 +208,20 @@ a:hover {
   bottom: -12px;
 }
 
+.title-center {
+  font-size: 2rem;
+  position: relative;
+}
+
+.title-center:before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  background-color: #24b67e;
+  width: 300px;
+  bottom: -12px;
+}
+
 /*------/ Box /------*/
 
 .box-pl2 {
