--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,21 @@ a:hover {
   bottom: -12px;
 }
 
+.title-center {
+  font-size: 2rem;
+  position: relative;
+}
+
+.title-center:before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  background-color: #0078ff;
+  width: 180px;
+  bottom: -12px;
+}
+
+
 /*------/ Box /------*/
 
 .box-pl2 {
